--- a/front/src/components/common/Layout.module.scss
+++ b/front/src/components/common/Layout.module.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables';
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -13,4 +15,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    &.otherPage {
+        border-radius: 0 0 20px 20px;
+        box-shadow: $bx-accent;
+    }
 }
