--- a/front/src/components/ui/Counters/Counters.module.scss
+++ b/front/src/components/ui/Counters/Counters.module.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     & > .counter {
+        width: 27%;
         font-size: 20px;
         text-align: center;
         .heading {
