--- a/front/src/components/common/Layout.module.scss
+++ b/front/src/components/common/Layout.module.scss
@@ -17,6 +17,7 @@
     background-position: center;
 
     &.otherPage {
+        height: 280px;
         border-radius: 0 0 20px 20px;
         box-shadow: $bx-accent;
     }
