--- a/front/src/scss/_variables.scss
+++ b/front/src/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 $accent: #b53471;
 $white: #f1e8e8;
-$dark-purple: #310c24;
+$dark-purple: #390828;
 $black: #1a0612;
 $purple: #511734;
 $yellow: #ffd341;
@@ -12,3 +12,5 @@ $bx-16: 0 3px 6px rgba(0, 0, 0, .16);
 $bx-10: 0 3px 6px rgba(0, 0, 0, .1);
 
 $default-font: 'Roboto';
+
+$mobile: 480px;
