--- a/front/src/components/pages/Home/Home.module.scss
+++ b/front/src/components/pages/Home/Home.module.scss
@@ -6,4 +6,8 @@
     font-size: 33px;
     color: $white;
     line-height: 1.5;
+
+    @media (max-width: $mobile) {
+        font-size: 26px;
+    }
 }
