--- a/front/src/components/pages/Profile/Profile.module.scss
+++ b/front/src/components/pages/Profile/Profile.module.scss
@@ -11,6 +11,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media (max-width: $mobile) {
+            width: 90%;
+            margin: 0 auto;
+        }
 
         > div {
             width: 48%;
