--- a/front/src/components/pages/SingleWorkout/SingleWorkout.module.scss
+++ b/front/src/components/pages/SingleWorkout/SingleWorkout.module.scss
@@ -7,7 +7,9 @@
     max-width: 560px;
     margin: 0 auto;
 
-    .exercise {
+    > button {
+            font-size: 20px;
+            cursor: pointer;
             margin-bottom: 30px;
             background-color: $purple;
             color: $white;
@@ -17,6 +19,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            border: none;
 
         &.finished {
             background-color: $dark-purple;
