--- a/front/src/components/pages/Workouts/Workouts.module.scss
+++ b/front/src/components/pages/Workouts/Workouts.module.scss
@@ -18,6 +18,19 @@
             justify-content: space-between;
             align-items: center;
 
+            > button {
+                font-size: 20px;
+                color: $white;
+                text-decoration: none;
+                justify-content: space-between;
+                display: flex;
+                align-items: center;
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+                width: 100%;
+            }
+
         &.finished {
             background-color: $dark-purple;
         }
