--- a/front/src/components/ui/Counters/Counters.module.scss
+++ b/front/src/components/ui/Counters/Counters.module.scss
@@ -8,14 +8,20 @@
         width: 27%;
         font-size: 20px;
         text-align: center;
+
+        @media (max-width: $mobile) {
+            font-size: 18px;
+        }
+
         .heading {
             color: $yellow;
             text-transform: capitalize;
         }
 
         .number {
+            font-size: 20px !important;
             font-weight: bold;
-            color: #fff;
+            color: $accent;
         }
     }
 }
