--- a/front/src/scss/index.scss
+++ b/front/src/scss/index.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 body {
-    background-color: $dark-purple;
+    background-color: $black;
     color: #fff;
 }
 
@@ -162,4 +162,22 @@ img {
 img {
     -webkit-user-drag: none;
     user-select: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+// Chrome, Safari, Edge, Opera
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+// Firefox
+
+input[type=number] {
+    -moz-appearance: textfield;
 }
